--- a/package.json
+++ b/package.json
@@ -4,30 +4,31 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@refinedev/cli": "^2.16.21",
-    "@refinedev/core": "^4.47.1",
-    "@refinedev/devtools": "^1.1.32",
-    "@refinedev/kbar": "^1.3.6",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.8.1",
-    "@refinedev/appwrite": "^6.4.6",
-    "uuid": "^9.0.0",
-    "@refinedev/mui": "^5.14.4",
-    "@refinedev/react-hook-form": "^4.8.14",
-    "@mui/icons-material": "^5.8.3",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.3",
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.8.6",
     "@mui/x-data-grid": "^6.6.0",
+    "@refinedev/appwrite": "^6.5.3",
+    "@refinedev/cli": "^2.16.36",
+    "@refinedev/core": "^4.53.0",
+    "@refinedev/devtools": "^1.2.6",
+    "@refinedev/kbar": "^1.3.12",
+    "@refinedev/mui": "^5.19.0",
+    "@refinedev/react-hook-form": "^4.8.20",
+    "@refinedev/react-router-v6": "^4.5.11",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
-    "@refinedev/react-router-v6": "^4.5.5"
+    "react-router-dom": "^6.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
@@ -35,8 +36,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^4.7.4",
-    "vite": "^4.3.1",
-    "@types/uuid": "^9.0.2"
+    "vite": "^4.3.1"
   },
   "scripts": {
     "dev": "refine dev",
